--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -1,40 +1,62 @@
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+</head>
+<title>Update Profile Info</title>
+
+<body>
   <div class="container">
     <div class="jumbotron">
 
+    <h1 class="text-center">Edit Your Details</h1>
+
+   
     <form class="form-horizontal">
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <img alt="Thumb doge" src="https://s3.amazonaws.com/lighthouse-compass/uploads/student/custom_avatar/459/thumb_doge.jpeg">
+        <img src="http://s4.postimg.org/bxgg5ftwd/Nicholas_Fraser_Why_You_Always_Lying_video_640x4.jpg">
       </div>
       </div>
-       <p></p>
       
        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="changeAvatar" class="btn btn-danger">Change Avatar</button>
+          <div class="col-sm-offset-2 col-sm-5">
+            <button type="changeAvatar" class="btn btn-danger">Change Profile Photo</button>
           </div>
         </div>
 
        <div class="form-group">
           <label for="inputName1" class="col-sm-2 control-label">Name</label>
-            <div class="col-sm-10">
+            <div class="col-sm-5">
               <input type="name" class="form-control" id="inputName1" placeholder="Name">
             </div>
         </div>
 
     <div class="form-group">
      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-      <div class="col-sm-10">
+      <div class="col-sm-5">
         <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
       </div>
     </div>
 
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+      <div class="col-sm-5">
+        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
     </div>
   </div>
+      
+    <div class="form-group">
+  <label for="inputDiet3" class="col-sm-2 control-label">Dietary Preference</label>
+  <div class="col-sm-5">
+    <select class="form-control">
+      <option>Vegan</option>
+      <option>Paleo</option>
+      <option>Gluten Free</option>
+      <option>Vegetarian</option>
+    </select>
+  </div>
+ </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button type="updateSettings" class="btn btn-default">Update Settings</button>
@@ -45,3 +67,7 @@
 
   </div>
 </div>
+
+</body>
+<footer>
+</footer>
