Recipe and Results page almost done

--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -1,153 +1,54 @@
-<!-- <h3>Searching for some awesome <%= @search_term %> </h3> -->
+<body>
 
-<div class="container">
-  <div class="jumbotron">
-    <!-- Page Content -->
-      
+<main>
+  <section class="recipes container">
+    <header>
+      <h1 class="text-center">Search results for: Cheese</h1>
+    </header>
+    <div class="row">
+      <div class="col-sm-8 col-sm-push-2">
+        <article>
+          <header>
+            <h2 class="text-center">Mac &amp; Cheese</h2>
+          </header>
+          <figure>
+            <img src="http://mtltimes.ca/wp-content/uploads/2015/03/mac-and-cheese.jpg" alt="macaroni can cheese"/>
+          </figure>
+          <p class="lead">Your family will fall in love with homemade mac and cheese all over again. Trust us, this
+            ooey-gooey oven bake is cheesier than you ever thought possible.</p>
+          <p class="pull-right">
+            <a href="#" class="btn btn-primary btn-lg">View Recipe <i class="glyphicon glyphicon-chevron-right"></i></a>
+          </p>
+        </article>
+        <article>
+          <header>
+            <h2 class="text-center">Mac &amp; Cheese</h2>
+          </header>
+          <figure>
+            <img src="http://mtltimes.ca/wp-content/uploads/2015/03/mac-and-cheese.jpg" alt="macaroni can cheese"/>
+          </figure>
+          <p class="lead">Your family will fall in love with homemade mac and cheese all over again. Trust us, this
+            ooey-gooey oven bake is cheesier than you ever thought possible.</p>
+          <p class="pull-right">
+            <a href="#" class="btn btn-primary btn-lg">View Recipe <i class="glyphicon glyphicon-chevron-right"></i></a>
+          </p>
+        </article>
+        <article>
+          <header>
+            <h2 class="text-center">Mac &amp; Cheese</h2>
+          </header>
+          <figure>
+            <img src="http://mtltimes.ca/wp-content/uploads/2015/03/mac-and-cheese.jpg" alt="macaroni can cheese"/>
+          </figure>
+          <p class="lead">Your family will fall in love with homemade mac and cheese all over again. Trust us, this
+            ooey-gooey oven bake is cheesier than you ever thought possible.</p>
+          <p class="pull-right">
+            <a href="#" class="btn btn-primary btn-lg">View Recipe <i class="glyphicon glyphicon-chevron-right"></i></a>
+          </p>
+        </article>
+      </div>
+    </div>
+  </section>
+</main>
+</body>
 
-          <!-- Page Heading -->
-          <div class="row">
-              <div class="col-lg-12">
-                  <h3 style ="margin-bottom:3px; margin-top:0px;" class="page-header">Recipe Search Results<br>
-                      <small>Browse through these hand-picked selections by our editors</small>
-                  </h3>
-              </div>
-          </div>
-          <hr style="margin-bottom:18.5px !important; margin-top:0px !important; " />
-          <!-- /.row -->
-          <!-- Project One -->
-          <div class="row">
-              <div class="col-md-7">
-                  <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                  </a>
-              </div>
-              <div class="col-md-5">
-                  <h3>Project One</h3>
-                  <h4>Subheading</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-              </div>
-          </div>
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Project Two -->
-          <div class="row">
-              <div class="col-md-7">
-                  <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                  </a>
-              </div>
-              <div class="col-md-5">
-                  <h3>Project Two</h3>
-                  <h4>Subheading</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-              </div>
-          </div>
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Project Three -->
-          <div class="row">
-              <div class="col-md-7">
-                  <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                  </a>
-              </div>
-              <div class="col-md-5">
-                  <h3>Project Three</h3>
-                  <h4>Subheading</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-              </div>
-          </div>
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Project Four -->
-          <div class="row">
-
-              <div class="col-md-7">
-                  <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                  </a>
-              </div>
-              <div class="col-md-5">
-                  <h3>Project Four</h3>
-                  <h4>Subheading</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-              </div>
-          </div>
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Project Five -->
-          <div class="row">
-              <div class="col-md-7">
-                  <a href="#">
-                      <img class="img-responsive" src="http://placehold.it/700x300" alt="">
-                  </a>
-              </div>
-              <div class="col-md-5">
-                  <h3>Project Five</h3>
-                  <h4>Subheading</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                  <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-              </div>
-          </div>
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Pagination -->
-          <div class="row text-center">
-              <div class="col-lg-12">
-                  <ul class="pagination">
-                      <li>
-                          <a href="#">«</a>
-                      </li>
-                      <li class="active">
-                          <a href="#">1</a>
-                      </li>
-                      <li>
-                          <a href="#">2</a>
-                      </li>
-                      <li>
-                          <a href="#">3</a>
-                      </li>
-                      <li>
-                          <a href="#">4</a>
-                      </li>
-                      <li>
-                          <a href="#">5</a>
-                      </li>
-                      <li>
-                          <a href="#">»</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <!-- /.row -->
-
-          <hr>
-
-          <!-- Footer -->
-          <footer>
-              <div class="row">
-                  <div class="col-lg-12">
-                      <h3><small>Copyright © Eatable 2015</small></h3>
-                  </div>
-              </div>
-              <!-- /.row -->
-          </footer>
-      
-      <!-- /.container -->
-  </div>
-</div>
