--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,7 @@
   <title></title>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav id="main-nav" class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
