--- a/app/views/recipes/recipe.erb
+++ b/app/views/recipes/recipe.erb
@@ -1,30 +1,38 @@
-<div class="container">
-  <div class="jumbotron">
-    <div class="single_left">                     
-      <h2 style="margin-top:0px; margin-bottom:20px;" class="single_title"> Recipe | Raw Vegan Matcha Energy Balls</h2>  
-
-        <p><a href="http://eatable.com.au/wp-content/uploads/2015/08/Matcha-Balls-Recipe-.jpg">
-
-          <img class="aligncenter wp-image-5752 size-full" src="http://eatable.com.au/wp-content/uploads/2015/08/Matcha-Balls-Recipe-.jpg" alt="Recipe - Matcha energy balls. Raw vegan gluten-free healthy snack" width="640" height="640"></a></p>
-            
-            <p>This recipe for Raw Vegan Matcha Energy Balls is gluten-free, refined sugar-free, vegan and Paleo.</p>
-            <p>Matcha powder is my&nbsp;new favourite superfood. I’ve been making Matcha lattes with almond milk most mornings, adding it to my smoothies and pimping my raw vegan bliss ball recipes. Matcha is loaded with antioxidants and is a great coffee substitute. The lemon in this recipe adds a citrus twist and compliments the Matcha well. It’s like a refreshing burst of energy in your mouth. Combined with protein from the almonds and healthy fats from the coconut it’s the perfectly balanced healthy snack.<br>
-            &nbsp;</p>
-            <h1>Raw Vegan Matcha Energy Balls Recipe</h1>
-            <p>&nbsp;</p>
-            <h3>Ingredients</h3>
-            <p>1 cup almond meal<br>
-            1.5 cups coconut flakes<br>
-            5 pitted medjool dates<br>
-            Zest from 1 lemon<br>
-            Juice from 1 lemon<br>
-            2 tsp matcha powder</p>
-            <h3>Method</h3>
-            <p>1. Blend all ingredients together until well combined.<br>
-            2. Roll into balls, the size is up to you!<br>
-            3. Enjoy! They will last up to 5 days in the fridge or a month in the freezer, just be sure to defrost them before eating.</p>
-            <p>Share your creations with Eatable using the #eatablefriendly tag on Instagram. We’d love to feature your brilliance!</p>
-            <p>&lt;3 Eatable’s Em</p>
-    </div>
-  </div>
-</div>
+<body>
+<main>
+  <section class="recipes container">
+    <article class="row">
+      <div class="col-sm-10 col-sm-push-1">
+        <header>
+          <h1 class="text-center">Mac & Cheese</h1>
+        </header>
+        <figure>
+          <img src="http://mtltimes.ca/wp-content/uploads/2015/03/mac-and-cheese.jpg" alt="macaroni and cheese"/>
+        </figure>
+        <p class="lead">Your family will fall in love with homemade mac and cheese all over again. Trust us, this ooey-gooey oven bake is cheesier than you ever thought possible</p>
+        <section class="ingredients">
+          <h2>Ingredients</h2>
+          <ul>
+            <li>3 Tbsp. non-hydrogenated margarine</li>
+            <li>1/4 cup flour</li>
+            <li>2 cups milk</li>
+            <li>1/4 cup Kraft 100% Parmesan Grated Cheese</li>
+            <li>2 cups Cracker Barrel Shredded Old Cheddar Cheese, divided</li>
+            <li>1-3/4 cups elbow macaroni, cooked</li>
+            <li>1/4 cup fresh bread crumbs</li>
+          </ul>
+        </section>
+        <section class="directions">
+          <h2>Directions</h2>
+          <ol>
+            <li>Heat oven to 350°F.</li>
+            <li>Melt margarine in large saucepan on medium heat. Whisk in flour; cook 1 min., stirring constantly. Gradually stir in milk; cook and stir 3 to 5 min. or until thickened. Add Parmesan and 1-1/2 cups cheddar; cook and stir 1 min. or until cheddar is melted. Add macaroni; stir to evenly coat.</li>
+            <li>Spoon into 1.5-L casserole dish sprayed with cooking spray; top with remaining cheddar, then bread crumbs.</li>
+            <li>Bake 20 min. or until macaroni mixture is heated through and topping is lightly browned.</li>
+          </ol>
+        </section>
+      </div>
+    </article>
+  </section>
+</main>
+</body>
