User page almost done

--- a/app/views/recipes/recipe.erb
+++ b/app/views/recipes/recipe.erb
@@ -5,7 +5,7 @@
     <article class="row">
       <div class="col-sm-10 col-sm-push-1">
         <header>
-          <h1 class="text-center">Mac & Cheese</h1>
+          <h1 class="text-center">Mac &amp; Cheese</h1>
         </header>
         <figure>
           <img src="http://mtltimes.ca/wp-content/uploads/2015/03/mac-and-cheese.jpg" alt="macaroni and cheese"/>
