User page edits

--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -10,10 +10,11 @@
         <figure>
           <img class="center-block" src="http://s21.postimg.org/93tj1rs3b/doge.jpg"/>
         </figure>
+
         <form class="form-horizontal">
           <div class="form-group">
           <div class="col-sm-offset-3 col-sm-5">
-            <button type="changeAvatar" class="btn btn-danger">Change Profile Photo</button>
+            <button type="changePhoto" class="btn btn-danger">Change Profile Photo</button>
                   </div>
                 </div>
 
@@ -45,6 +46,7 @@
                 <option>Choose One</option>
                 <option>Vegan</option>
                 <option>Paleo</option>
+                <option>Pescatarian</option>
                 <option>Gluten Free</option>
                 <option>Vegetarian</option>
                 <option>Lactose</option>
