--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -23,66 +23,27 @@ main > section > header { padding: 0 0 5em; }
 .user form { width: 390px ; margin: 0 auto; }
 .user label { padding: 1em 0; }
 
-.navbar-default {
-  background-color: #c11f0f;
-  border-color: #9a1a0c;
-}
-.navbar-default .navbar-brand {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #ffbbbc;
-}
-.navbar-default .navbar-text {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > a {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #ffbbbc;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu {
-  background-color: #c11f0f;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-  color: #ecf0f1;
-}
+.navbar,
+.navbar-default { background-color: #c11f0f; border-color: #9a1a0c; }
+.navbar-default .navbar-brand { color: #ecf0f1; }
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus { color: #ffbbbc; }
+.navbar-default .navbar-text { color: #ecf0f1; }
+.navbar-default .navbar-nav > li > a { color: #ecf0f1; }
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus { color: #ffbbbc; }
+.navbar-default .navbar-nav > li > .dropdown-menu { background-color: #c11f0f; }
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a { color: #ecf0f1; }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-  color: #ffbbbc;
-  background-color: #9a1a0c;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
-  background-color: #c11f0f;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: #ffbbbc;
-  background-color: #9a1a0c;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: #ffbbbc;
-  background-color: #9a1a0c;
-}
-.navbar-default .navbar-toggle {
-  border-color: #9a1a0c;
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: #9a1a0c;
-}
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: #ecf0f1;
-}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus { color: #ffbbbc; background-color: #9a1a0c; }
+.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider { background-color: #c11f0f; }
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus { color: #ffbbbc; background-color: #9a1a0c; }
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus { color: #ffbbbc; background-color: #9a1a0c; }
+.navbar-default .navbar-toggle { border-color: #9a1a0c; }
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus { background-color: #9a1a0c; }
+.navbar-default .navbar-toggle .icon-bar { background-color: #ecf0f1; }
 .navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-  border-color: #ecf0f1;
-}
-.navbar-default .navbar-link {
-  color: #ecf0f1;
-}
-.navbar-default .navbar-link:hover {
-  color: #ffbbbc;
-}
+.navbar-default .navbar-form { border-color: #ecf0f1; }
+.navbar-default .navbar-link { color: #ecf0f1; }
+.navbar-default .navbar-link:hover { color: #ffbbbc; }
 
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
