--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,15 @@
-<h1><% @recipes.each do |recipe| %>
-  <%= recipe.description %>
-<% end %></h1>
+
+<body>
+<main>
+  <section class="recipes container">
+    <article class="row">
+      <div class="col-sm-10 col-sm-push-1">
+        <header>
+          <h1 class="text-center">Dietary Needs
+          <p><small>Made Easy</small></p></h1>
+        </header>
+      </div>
+    </article>
+  </section>
+</main>
+</body>  
