--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,6 +14,13 @@ main > section > header { padding: 0 0 5em; }
 .recipes .ingredients { font-size: 150%; font-weight: 300; margin: 2em 0; }
 
 #main-nav { margin-bottom: 0; }
+#main-nav a { font-weight: 500; font-size: 120%; margin-right: 20px; }
+#main-nav .navbar-brand img { width: 115px; height: 25px; margin-left: 10px; }
+#main-nav .navbar-brand-icon img { width: 22px; height: 30px; margin-top: 10px; }
+#main-nav .navbar-form .form-control { width: 300%; }
+#main-nav .navbar-form .btn { margin-left: 25em;}
+#main-nav .navbar-form .glyphicon { margin-left: -8em; }
+
 
 .user,
 .user header { background: #fff; }
