--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,13 +1,18 @@
 
 <body>
 <main>
-  <section class="recipes container">
+<section class="main-img">
+  <img class="main-pic" src="/img/ingredients_photo_main.jpg">
+  </section>
+  <section class="landing-page container">
     <article class="row">
       <div class="col-sm-10 col-sm-push-1">
         <header>
           <h1 class="text-center">Dietary Needs
           <p><small>Made Easy</small></p></h1>
         </header>
+      
+
       </div>
     </article>
   </section>
