--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -49,10 +49,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand-icon" href="/">
-      <img src="img/logo_white_top.png" alt="logo-icon"></a>
-      <div class="navbar-brand">
-      <img src="/img/lets_spoon_white_text.png" alt="logo"></div>
+      <a  href="/">
+        <img class="navbar-brand" src="/img/lets_spoon_white_text.png" alt="logo">
+        <img class="navbar-brand-icon" src="/img/logo_white_top.png" alt="logo-icon">
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
