--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,20 +1,60 @@
 
 <body>
-<main>
-<section class="main-img">
-  <img class="main-pic" src="/img/ingredients_photo_main.jpg">
-  </section>
-  <section class="landing-page container">
-    <article class="row">
-      <div class="col-sm-10 col-sm-push-1">
-        <header>
-          <h1 class="text-center">Dietary Needs
-          <p><small>Made Easy</small></p></h1>
-        </header>
-      
+<main id ="main-container">
+  <div class="main-img">
+    <img src="/img/ingredients_photo_main.jpg">
+    <div class="main-text">Find the right diet for you. </div>
+  </div>
 
+  <section class="landing-page container">
+    <!-- Beginning of first row -->
+    <article class="row">
+      <div class="col-md-4">
+        <img src="/img/home_pic.jpg">
+        <p>Recipe</p>
+        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
+
+      <div class="col-md-4">
+        <img src="/img/home_pic.jpg">
+        <p>Recipe</p>
+        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
+      </div>
+
+      <div class="col-md-4">
+        <img src="/img/home_pic.jpg">
+        <p>Recipe</p>
+        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
+      </div>
+
     </article>
+    <!--End of first row-->
+
+    <!-- Beginning of second row -->
+    <article class="row">
+      <div class="col-md-4">
+        <img src="/img/home_pic.jpg">
+        <p>Recipe</p>
+        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
+      </div>
+
+      <div class="col-md-4">
+        <img src="/img/home_pic.jpg">
+        <p>Recipe</p>
+        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
+      </div>
+
+      <div class="col-md-4">
+        <img src="/img/home_pic.jpg">
+        <p>Recipe</p>
+        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
+      </div>
+
+    </article>
+    <!--End of second row-->
+
+
+
   </section>
 </main>
 </body>  
