--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -66,8 +66,18 @@ main > section > header { padding: 0 0 5em; }
   }
 }
 
-.landing-page {
-  width: 800px;
- background: #fff; }
-.landing-page article { padding: 0 0 10em; }
-.landing-page h1 { font-size: 5em; margin-top: 1em; }
+#main-container .main-img { position: relative; width: 100%; }
+#main-container .main-text { position: absolute; top: 250px; font-size: 180%; text-align: center; width: 100%; color: white; }
+#main-container h2 span { color: white; 
+   font: bold 24px/45px Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; }
+
+.landing-page { width: 800px; background: #fff; }
+.landing-page article { padding: 0 0 2em; }
+.landing-page h1 { font-size: 5em; margin-top: 10px; }
+.landing-page .attachment-home-box { width: 140px; height: 140px;}
+.landig-page .text-phrase { margin-top: 10px; }
+.landing-page .row:first-of-type { margin-top: 2em; }
