implemented multiple diets for user

--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -12,10 +12,11 @@
             <h2 class="text-center"><%= recipe.name %></h2>
           </header>
           <figure>
-            <img src="<%= recipe.image_url %>"/>
+            <img class="center-block" src="<%= recipe.image_url %>"/>
           </figure>
           <p class="lead"><%= recipe.description %></p>
-          <p class="pull-right">
+          <!-- <p class="pull-right"> -->
+          <p>
             <a href="/recipes/<%= recipe.id %>" class="btn btn-primary btn-lg">View Recipe <i class="glyphicon glyphicon-chevron-right"></i></a>
           </p>
           <% end %>
