--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -42,12 +42,7 @@
               <div class="form-group">
             <label for="inputDiet3" class="col-sm-2 control-label">Diet</label>
             <div class="col-sm-8">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Vegan
-                </label>
-              </div>
-              <!-- <select class="form-control">
+              <select class="form-control">
                 <option>Choose One</option>
                 <option>Vegan</option>
                 <option>Paleo</option>
@@ -55,7 +50,7 @@
                 <option>Gluten Free</option>
                 <option>Vegetarian</option>
                 <option>Lactose</option>
-              </select> -->
+              </select>
             </div>
            </div>
 
