--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -11,7 +11,7 @@
           <img class="center-block" src="http://s21.postimg.org/93tj1rs3b/doge.jpg"/>
         </figure>
 
-        <form class="form-horizontal">
+        <form action="/users/<%= @user.id %>/update" method="post" class="form-horizontal">
           <div class="form-group">
           <div class="col-sm-offset-3 col-sm-5">
             <button type="changePhoto" class="btn btn-danger">Change Profile Photo</button>
@@ -41,22 +41,73 @@
                 
               <div class="form-group">
             <label for="inputDiet3" class="col-sm-2 control-label">Diet</label>
-            <div class="col-sm-8">
-              <select class="form-control">
-                <option>Choose One</option>
-                <option>Vegan</option>
-                <option>Paleo</option>
-                <option>Pescatarian</option>
-                <option>Gluten Free</option>
-                <option>Vegetarian</option>
-                <option>Lactose</option>
-              </select>
-            </div>
-           </div>
+            <div class="row">
 
+              <div class="checkbox-inline">
+                <label>
+                  <input type="checkbox" name="pesc" value=true 
+                    <% if @diet1 %>
+                      checked
+                    <% end %>  
+                  > Pescatarian
+                </label>
+              </div>
+          
+              <div class="checkbox-inline">
+                <label>
+                  <input type="checkbox"  name="vegan" value=true
+                   <% if @diet2 %>
+                      checked
+                    <% end %>  
+                  > Vegan
+                </label>
+              </div>
+                  
+              <div class="checkbox-inline">
+                <label>
+                  <input type="checkbox" name="vegetarian" value=true
+                    <% if @diet3 %>
+                      checked
+                    <% end %>  
+                  > Vegetarian
+                </label>
+              </div>
+                  
+                  
+              <div class="checkbox-inline">
+                <label>
+                  <input type="checkbox" name="paleo" value=true
+                    <% if @diet4 %>
+                      checked
+                    <% end %>  
+                  > Paleo
+                </label>
+              </div>
+                  
+              <div class="checkbox-inline">
+                <label>
+                  <input type="checkbox" name="glut" value=true
+                    <% if @diet5 %>
+                      checked
+                    <% end %>  
+                  > Gluten free
+                </label>
+              </div>
+                  
+              <div class="checkbox-inline">
+                <label>
+                  <input type="checkbox" name="lact" value=true
+                    <% if @diet6 %>
+                      checked
+                    <% end %>  
+                > Lactose free
+                </label>
+              </div>
+                   </div>
+           </div> 
             <div class="form-group">
               <div class="col-sm-offset-3 col-sm-1">
-                <button type="updateSettings" class="btn btn-default">Update Settings</button>
+                <button class="btn btn-default">Update Settings</button>
               </div>
             </div>
           </form>
