added values to settings page

--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -19,25 +19,25 @@
                 </div>
 
                <div class="form-group">
-                  <label for="inputName1" class="col-sm-2 control-label">Name</label>
+                  <label for="inputName1" class="col-sm-2 control-label" >Name</label>
                     <div class="col-sm-8">
-                      <input type="name" class="form-control" id="inputName1" placeholder="Name">
+                      <input type="name" class="form-control" id="inputName1" value=<%= @user.name %>>
                     </div>
                 </div>
 
             <div class="form-group">
-             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+             <label for="inputEmail3" class="col-sm-2 control-label" >Email</label>
               <div class="col-sm-8">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="email" class="form-control" id="inputEmail3" value=<%= @user.email %>>
               </div>
             </div>
 
-            <div class="form-group">
+          <!--   <div class="form-group">
               <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-8">
                   <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
               </div>
-            </div>
+            </div> -->
                 
               <div class="form-group">
             <label for="inputDiet3" class="col-sm-2 control-label">Diet</label>
