--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -66,15 +66,24 @@
       </form>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @user.name %> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Saved Recipes</a></li>
-            <li><a href="/users/<%= @user.id %>">Settings</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Log Out</a></li>
-          </ul>
-        </li>
+        <% if @user %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @user.name %> <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Saved Recipes</a></li>
+              <li><a href="/users/<%= @user.id %>">Settings</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="/logout">Log Out</a></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="dropdown">
+            <a href="" class="dropdown-toggle">SignUp</a>
+          </li>
+          <li class="dropdown">
+            <a href="/users/login" class="dropdown-toggle">Login</a>
+          </li>    
+        <% end %>  
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
