Homepage/users page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 <main id ="main-container">
   <div class="main-img">
     <img src="/img/ingredients_photo_main.jpg">
-    <div class="main-text">Find the right diet for you. </div>
+<!--     <p class="main-text">Find the right diet for you. </p> -->
   </div>
 
   <section class="landing-page container">
@@ -11,19 +11,19 @@
     <article class="row">
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
-        <p>Recipe</p>
+        <p>Paleo</p>
         <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
-        <p>Recipe</p>
+        <p>Vegetarian</p>
         <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
-        <p>Recipe</p>
+        <p>Lactose</p>
         <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
@@ -34,19 +34,19 @@
     <article class="row">
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
-        <p>Recipe</p>
+        <p>Gluten Free</p>
         <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
-        <p>Recipe</p>
+        <p>Pescatarian</p>
         <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
-        <p>Recipe</p>
+        <p>Vegan</p>
         <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
