--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -35,7 +35,7 @@
    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="javascript/bootstrap.min.js"></script>
+    <script src="/javascript/bootstrap.min.js"></script>
   <title></title>
 </head>
 <body>
