--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -28,7 +28,7 @@
             <div class="form-group">
              <label for="inputEmail3" class="col-sm-2 control-label" >Email</label>
               <div class="col-sm-8">
-                <input type="email" class="form-control" id="inputEmail3" value=<%= @user.email %>>
+                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
               </div>
             </div>
 
