Added fonts to all pages

--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -2,7 +2,7 @@
 <main>
   <section class="recipes container">
     <header>
-      <h1 class="text-center">Search results for: <%= @search_term %></h1>
+      <h1 class="results text-center">Search results for: <%= @search_term %></h1>
     </header>
     <div class="row">
       <div class="col-sm-8 col-sm-push-2">
