--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,4 +1,4 @@
-body { background: #eee; }
+body { background: #eee; font-family: 'Geomanist'; }
 
 figure { margin: 2em 0; }
 
@@ -7,11 +7,12 @@ img { max-width: 100%; }
 main > section > header { padding: 0 0 5em; }
 
 .recipes { width: 800px; background: #fff; }
-.recipes header { background: #fff; }
+.recipes header { background: #fff; font-family: 'Geomanist'; font-weight: 900; }
 .recipes article { padding: 0 0 10em; }
 .recipes h1 { font-size: 5em; margin-top: 1em; }
 .recipes .directions,
 .recipes .ingredients { font-size: 150%; font-weight: 300; margin: 2em 0; }
+.recipes .results { font-size: 3em; font-family: 'Geomanist'; font-weight: 900; }
 
 #main-nav { margin-bottom: 0; }
 #main-nav a { font-weight: 500; font-size: 120%; margin-right: 20px; }
@@ -24,9 +25,9 @@ main > section > header { padding: 0 0 5em; }
 
 
 .user { width: 800px; background: #fff; }
-.user header { background: #fff; }
+.user header { background: #fff; margin-top: -3em; }
 .user article { padding: 0 0 10em; }
-.user h1 { font-size: 5em; margin-top: 1em; }
+.user h1 { font-size: 5em; margin-top: 1em; font-family: 'Geomanist'; font-weight: 900;}
 .user img { width: 250px; height: 250px;}
 .user form { width: 390px ; margin: 0 auto; }
 .user label { padding: 1em 0; }
@@ -84,3 +85,8 @@ main > section > header { padding: 0 0 5em; }
 .landing-page .pic-1 { width: 140px; height: 140px;}
 .landig-page .text-phrase { margin-top: 10px; }
 .landing-page .row:first-of-type { margin-top: 2em; }
+
+@font-face {
+  font-family: 'Geomanist';
+  src: url("/fonts/geomanist-regular-webfont.ttf");
+}
