Added new saved recipe page, save recipe function, minor tweak in api call

--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -55,7 +55,7 @@
           
               <div class="checkbox-inline">
                 <label>
-                  <input type="checkbox"  name="vegan" value=true
+                  <input type="checkbox"  name="vegetarian" value=true
                    <% if @diet2 %>
                       checked
                     <% end %>  
@@ -65,7 +65,7 @@
                   
               <div class="checkbox-inline">
                 <label>
-                  <input type="checkbox" name="vegetarian" value=true
+                  <input type="checkbox" name="vegan" value=true
                     <% if @diet3 %>
                       checked
                     <% end %>  
@@ -76,7 +76,7 @@
                   
               <div class="checkbox-inline">
                 <label>
-                  <input type="checkbox" name="paleo" value=true
+                  <input type="checkbox" name="glut" value=true
                     <% if @diet4 %>
                       checked
                     <% end %>  
