--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -69,7 +69,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @user.name %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Saved Recipes</a></li>
+            <li><a href="/users/<%= @user.id %>/recipes">Saved Recipes</a></li>
             <li><a href="/users/<%= @user.id %>">Settings</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Log Out</a></li>
