--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -1,4 +1,39 @@
 <body>
+
+<style>
+input[type="checkbox"].checkbox {
+    display: none;
+}
+input[type="checkbox"].checkbox + label {
+    display: inline;
+    position: relative;
+    background-color: #BDBDBD;
+    
+    /*label styling*/
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 15px;
+    color: #ffffff;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+input[type="checkbox"].checkbox:checked + label {
+    background-color: #c11f0f;
+}
+
+input[type="checkbox"].checkbox:disabled + label {
+    opacity: 0.5;
+}
+
+#refine_search {
+  padding: 1em;
+}
+</style>
 <main>
   <section class="recipes container">
     <header>
@@ -6,84 +41,125 @@
     </header>
 
     <% unless @user %>
-
-    <section id="diets_list" class="text-center">
-      <form action="/search/refine" method="post">
-        <div class="form-group" >
+    <div id= "refine_search" class="text-center">
+    <form action="/search/refine" method="post">
+    <div class="form-group" class="container">
             <!-- <label for="inputDiet3" class="col-sm-2 control-label">Diet</label> -->
-          <div class="center-block">
+            <div class="center-block">
+        <input type="checkbox" id="1" class="checkbox" name="pesc" value=true  
+          <% if @diet1 %>
+            checked
+          <% end %>>
+        <label for="1">Pescatarian</label>
 
-            <div class="checkbox-inline">
-              <label>
-                <input type="checkbox" name="pesc" value=true 
-                  <% if @diet1 %>
-                    checked
-                  <% end %>  
-                > Pescatarian
-              </label>
-            </div>
+        <input type="checkbox" id="2" class="checkbox" name="vegan" value=true 
+          <% if @diet2 %>
+            checked
+          <% end %>>
+        <label for="2">Vegan</label>
+
+        <input type="checkbox" id="3" class="checkbox" name="vegetarian" value=true 
+          <% if @diet3 %>
+            checked
+          <% end %>>
+        <label for="3">Vegetarian</label>
+
+        <input type="checkbox" id="4" class="checkbox" name="glut" value=true 
+          <% if @diet4 %>
+            checked
+          <% end %>>
+        <label for="4">Gluten Free</label>
+
+        <input type="checkbox" id="5" class="checkbox" name="paleo" value=true 
+          <% if @diet5 %>
+            checked
+          <% end %>>
+        <label for="5">Paleo</label>
+
+        <input type="checkbox" id="6" class="checkbox" name="lact" value=true 
+          <% if @diet6 %>
+            checked
+          <% end %>>
+        <label for="6">Lactose Free</label>              
+
+      
+
+             <!--  <div class="checkbox">
+                 <input type="checkbox" id="1" class="checkbox" name="pesc" value=true 
+                    <% if @diet1 %>
+                      checked
+                    <% end %>  
+                  >
+                <label for="1">
+                  Pescatarian
+                </label>
+              </div>
           
-            <div class="checkbox-inline">
-              <label>
-                <input type="checkbox"  name="vegan" value=true
-                 <% if @diet2 %>
-                    checked
-                  <% end %>  
-                > Vegan
-              </label>
+              <div class="checkbox">
+              <input type="checkbox" id="2" class="checkbox"   name="vegan" value=true
+                   <% if @diet2 %>
+                      checked
+                    <% end %>  
+                  >
+                <label for="2">
+                   Vegan
+                </label>
+              </div>
+                  
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="vegetarian" value=true
+                    <% if @diet3 %>
+                      checked
+                    <% end %>  
+                  > Vegetarian
+                </label>
+              </div>
+                  
+                  
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="paleo" value=true
+                    <% if @diet4 %>
+                      checked
+                    <% end %>  
+                  > Paleo
+                </label>
+              </div>
+                  
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="glut" value=true
+                    <% if @diet5 %>
+                      checked
+                    <% end %>  
+                  > Gluten free
+                </label>
+              </div>
+                  
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="lact" value=true
+                    <% if @diet6 %>
+                      checked
+                    <% end %>  
+                > Lactose free
+                </label>
+              </div>
+                   </div> -->
+           </div> 
+           <input type="hidden" name="search_term" value=<%= @search_term %>>
+            <div class="form-group" id="refine_search">
+              <!-- <div class="col-sm-offset-3 col-sm-1"> -->
+                <button class="btn btn-default center-block">Refine Search</button>
+              <!-- </div> -->
             </div>
-                
-            <div class="checkbox-inline">
-              <label>
-                <input type="checkbox" name="vegetarian" value=true
-                  <% if @diet3 %>
-                    checked
-                  <% end %>  
-                > Vegetarian
-              </label>
-            </div>
-                
-                
-            <div class="checkbox-inline">
-              <label>
-                <input type="checkbox" name="paleo" value=true
-                  <% if @diet4 %>
-                    checked
-                  <% end %>  
-                > Paleo
-              </label>
-            </div>
-                
-            <div class="checkbox-inline">
-              <label>
-                <input type="checkbox" name="glut" value=true
-                  <% if @diet5 %>
-                    checked
-                  <% end %>  
-                > Gluten free
-              </label>
-            </div>
-                
-            <div class="checkbox-inline">
-              <label>
-                <input type="checkbox" name="lact" value=true
-                  <% if @diet6 %>
-                    checked
-                  <% end %>  
-              > Lactose free
-              </label>
-            </div>
-          </div>
-        </div> 
-        <input type="hidden" name="search_term" value=<%= @search_term %>>
-        
-          <div>
-            <button class="btn btn-default">Refine Search</button>
-    
-        </div>
-      </form>  
-    <% end %>  
-  </section>  
+          </form>  
+          <% end %>
+         </div>   
+
+         </form>
+         </div>
 
     <div class="row">
       <div class="col-sm-8 col-sm-push-2">
@@ -107,7 +183,7 @@
   </section>
 </main>
 
-<!-- <script src="bower_components/jquery/dist/jquery.min.js"></script> -->
-<!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
+<!-- <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
 </body>
 </html>
