--- a/app/views/users/user.erb
+++ b/app/views/users/user.erb
@@ -28,7 +28,7 @@
             <div class="form-group">
              <label for="inputEmail3" class="col-sm-2 control-label" >Email</label>
               <div class="col-sm-8">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="email" class="form-control" id="inputEmail3" value=<%= @user.email %>>
               </div>
             </div>
 
@@ -77,21 +77,21 @@
                   
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" name="paleo" value=true
+                  <input type="checkbox" name="glut" value=true
                     <% if @diet4 %>
                       checked
                     <% end %>  
-                  > Paleo
+                  > Gluten Free
                 </label>
               </div>
                   
               <div class="checkbox">
                 <label>
-                  <input type="checkbox" name="glut" value=true
+                  <input type="checkbox" name="paleo" value=true
                     <% if @diet5 %>
                       checked
                     <% end %>  
-                  > Gluten free
+                  > Paleo
                 </label>
               </div>
                   
