Finished homepage layout

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,26 +5,28 @@
     <img src="/img/ingredients_photo_main.jpg">
 <!--     <p class="main-text">Find the right diet for you. </p> -->
   </div>
-
+<nav class="navbar navbar-inverse">
+<h3 class="text-center"><lead>Never be unsatisfied again</lead></h3>
+</nav>
   <section class="landing-page container">
+    <header>
+      
+    </header>
     <!-- Beginning of first row -->
     <article class="row">
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
         <p>Paleo</p>
-        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
         <p>Vegetarian</p>
-        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
         <p>Lactose</p>
-        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
     </article>
@@ -35,19 +37,16 @@
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
         <p>Gluten Free</p>
-        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
         <p>Pescatarian</p>
-        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
       <div class="col-md-4">
         <img src="/img/home_pic.jpg">
         <p>Vegan</p>
-        <p>Do you have food intolerances? Are you new to the Eatable-friendly lifestyle? Then start here!</p>
       </div>
 
     </article>
