--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -36,6 +36,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/javascript/bootstrap.min.js"></script>
+
   <title></title>
 </head>
 <body>
@@ -71,7 +72,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @user.name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Saved Recipes</a></li>
+              <li><a href="/users/<%= @user.id %>/recipes">Saved Recipes</a></li>
               <li><a href="/users/<%= @user.id %>">Settings</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="/logout">Log Out</a></li>
